[package]
name = "osrm-ch-m2m"
version = "0.1.0"
authors = ["Michael Killough <michael.killough@deliveroo.co.uk>"]
edition = "2018"

[build-dependencies]
bindgen = "0.42"

[dependencies]
bitvec = "0.9"
priority-queue = "0.5"
rayon = "1.0"
superslice = "0.1"
tar = "0.4"

# For loading queries:
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
